--- a/requirements.txt
+++ b/requirements.txt
@@ -25,7 +25,13 @@ streamlit==1.52.2
 pypdf==6.5.0
 
 # ================================
+# 检索优化
+# ================================
+rank-bm25==0.2.2        # BM25算法（混合检索）
+
+# ================================
 # 工具库
 # ================================
 python-dotenv==1.2.1    # 环境变量管理
 openai==2.14.0          # OpenAI API 客户端
+numpy>=1.24.0           # 数值计算
